// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a subtitle 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 cXQSCO"
>
  <p
    class="feature__SubTitle-sc-6swrp6-2 ENkne"
  >
    Watch anywhere. Cancel at any time.
  </p>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 cXQSCO"
>
  <h1
    class="feature__Title-sc-6swrp6-1 ksumGJ"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populaeted data 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 cXQSCO"
>
  <h1
    class="feature__Title-sc-6swrp6-1 ksumGJ"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <p
    class="feature__SubTitle-sc-6swrp6-2 ENkne"
  >
    Watch anywhere. Cancel at any time.
  </p>
</div>
`;
